longhorn/longhorn_auth.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: longhorn-system
  name: longhorn-auth-middleware
spec:
  basicAuth:
    secret: longhorn-auth
