longhorn/longhorn_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: longhorn-system-longhorn-auth-middleware@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: longhorn-ui
spec:
  tls:
    - hosts:
        - longhorn.lab.qstetten.de
      secretName: longhorn-ui-cert
  rules:
    - host: "longhorn.lab.qstetten.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
